# dy-sql

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylint-license-header  .pylintrc  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  license-header.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: build.yaml
dysql/: __init__.py  annotations.py  connections.py  databases.py  exceptions.py  managers.py  mappers.py  pydantic_mappers.py  query_utils.py  test_managers.py
dysql/test/: __init__.py  managers.py  test_annotations.py  test_database_initialization.py  test_mappers.py  test_mariadbmap_tojson.py  test_pydantic_mappers.py  test_sql_decorator.py  test_sql_exists_decorator.py  test_sql_in_list_templates.py  test_sql_insert_templates.py  test_template_generators.py
dysql/test/dysql/: __init__.py  manager.py  test_database_initialization.py  test_mappers.py  test_mariadbmap_tojson.py  test_sql_decorator.py  test_sql_exists_decorator.py  test_sql_in_list_templates.py  test_sql_insert_templates.py  test_templates.py
scripts/: write-version.py
