[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dy-sql"
description = "Dynamically runs SQL queries and executions."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Adobe", email = "noreply@adobe.com"}
]
urls = { "Homepage" = "https://github.com/adobe/dy-sql" }

dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {test = { file = ["test_requirements.txt"] }}
version = {attr = "dysql.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
