[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "dy-sql"
description = "Dynamically runs SQL queries and executions."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Adobe", email = "noreply@adobe.com"}
]
urls = { "Homepage" = "https://github.com/adobe/dy-sql" }
version = "3.1"
dependencies = [
    # SQLAlchemy 2+ is not yet supported
    "sqlalchemy<2",
    # now using features only found in pydantic 2+
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=6.2.4",
    "pytest-randomly>=3.10.1",
    "pytest-cov>=2.12.1",
    "ruff>=0.12.7",
    "ruff-lsp>=0.0.45",
    "pre-commit>=3.6",
    "docker>=7",
]

[tool.uv.build-backend]
module-name = "dysql"
module-root = ""
source-exclude = ["dysql/test"]
wheel-exclude = ["dysql/test"]

[tool.ruff.lint]
# Enable the copyright rule
preview = true
extend-select = ["CPY"]

[tool.ruff.lint.flake8-copyright]
min-file-size = 200
notice-rgx = '''"""
Copyright [(2)\d{3}]* Adobe
All Rights Reserved.

NOTICE: Adobe permits you to use, modify, and distribute this file in accordance
with the terms of the Adobe license agreement accompanying it.
"""'''
